--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -9,8 +9,9 @@
     <button (click)="versBot()" class="btn btn-light">Jouer contre
         l'ordinateur</button>
 
-        <input type="text"  #pseudo>
-    <button (click)="versShifumi(pseudo.value)" class="btn btn-light">Jouer contre un joueur</button>
+        <input type="text"  #Joueur1>
+        <input type="text"  #Joueur2>
+    <button (click)="versShifumi(Joueur1.value,Joueur2.value)" class="btn btn-light">Jouer contre un joueur</button>
     <br>
 
 
