--- a/src/app/shifumi/shifumi.component.html
+++ b/src/app/shifumi/shifumi.component.html
@@ -1,5 +1,6 @@
-{{pseudo}} contre Joueur
-
+<ul>
+  <li *ngFor="let item of pseudo">{{pseudo}}</li>
+</ul> contre Joueur
 <!-- colonne des choix du joueur 1 -->
 <div id="row" class="row">
   <div id="joueur1" class="col-sm">
