--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -9,9 +9,7 @@
     <button (click)="versBot()" class="btn btn-light">Jouer contre
         l'ordinateur</button>
 
-        <input type="text"  #Joueur1>
-        <input type="text"  #Joueur2>
-    <button (click)="versShifumi(Joueur1.value,Joueur2.value)" class="btn btn-light">Jouer contre un joueur</button>
+    <button (click)="versShifumi()" class="btn btn-light">Jouer contre un joueur</button>
     <br>
 
 
