--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <router-outlet (sendRequestofather)="send($event)" ></router-outlet>
+    <router-outlet ></router-outlet>
 </body>
 <footer><p>By Quentin Labanvoy & Antonin Abeilhou</p></footer>
 
