--- a/src/app/shifumi/shifumi.component.html
+++ b/src/app/shifumi/shifumi.component.html
@@ -1,6 +1,6 @@
-<ul>
-  <li *ngFor="let item of pseudo">{{pseudo}}</li>
-</ul> contre Joueur
+{{pseudo1}}{{pseudo2}}
+<input type="text" id="search" #joueur1>
+        <input type="text" id="search" #joueur2  (keyup)="send(joueur1.value,joueur2.value);">
 <!-- colonne des choix du joueur 1 -->
 <div id="row" class="row">
   <div id="joueur1" class="col-sm">
